--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-.cabecalho{
+.cabecalho-lista-item{
     background-color: #383D58;
     color: white;
-  display: flex;}
+  display: flex;
+  justify-content: space-around;
+  display: inline-block;
+  margin: 0 16px;
+}
